--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
     "react/": "https://aistudiocdn.com/react@^19.1.1/",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.16.0",
-    "react-dom": "https://aistudiocdn.com/react-dom@^19.1.1"
+    "react-dom": "https://aistudiocdn.com/react-dom@^19.1.1",
+    "framer-motion": "https://aistudiocdn.com/framer-motion@^11.3.19"
   }
 }
 </script>
